<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.register.RegisterActivity">

        <include
            layout="@layout/layout_toolbar"
            android:id="@+id/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/body10"
                            android:text="@string/teks_username" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:background="@drawable/background_border"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_6sdp"
                            android:paddingBottom="@dimen/_10sdp">

                            <EditText
                                android:id="@+id/edt_username"
                                android:background="@color/transparant"
                                android:gravity="start"
                                style="@style/editTextEntryName"
                                android:textColorHint="@color/abu1" />
                        </RelativeLayout>

                        <TextView
                            android:layout_marginTop="@dimen/_10sdp"
                            style="@style/body10"
                            android:text="@string/teks_email" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:background="@drawable/background_border"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_6sdp"
                            android:paddingBottom="@dimen/_10sdp">

                            <EditText
                                android:inputType="textEmailAddress"
                                android:id="@+id/edt_email"
                                android:background="@color/transparant"
                                android:gravity="start"
                                style="@style/editTextEntryName"
                                android:textColorHint="@color/abu1" />
                        </RelativeLayout>


                        <TextView
                            android:layout_marginTop="@dimen/_10sdp"
                            style="@style/body10"
                            android:text="@string/teks_password" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:background="@drawable/background_border"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_6sdp"
                            android:paddingBottom="@dimen/_10sdp">

                            <EditText
                                android:inputType="textPassword"
                                android:id="@+id/edt_password"
                                android:background="@color/transparant"
                                android:gravity="start"
                                style="@style/editTextEntryName"
                                android:textColorHint="@color/abu1" />
                        </RelativeLayout>

                        <TextView
                            android:layout_marginTop="@dimen/_10sdp"
                            style="@style/body10"
                            android:text="@string/teks_konfirmasi_passowrd" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:background="@drawable/background_border"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingEnd="@dimen/_6sdp"
                            android:paddingBottom="@dimen/_10sdp">

                            <EditText
                                android:inputType="textPassword"
                                android:id="@+id/edt_konfirmasi_password"
                                android:background="@color/transparant"
                                android:gravity="start"
                                style="@style/editTextEntryName"
                                android:textColorHint="@color/abu1" />
                        </RelativeLayout>

                        <Button
                            android:id="@+id/btn_daftar"
                            android:text="@string/teks_daftar_sekarang"
                            android:layout_marginTop="@dimen/_20sdp"
                            style="@style/button_main"/>

                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>

            <LinearLayout

                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    style="@style/body10"
                    android:text="@string/teks_memiliki_akun"/>
                <TextView
                    android:id="@+id/tv_masuk"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textColor="@color/colorPrimary"
                    style="@style/title10"
                    android:text="@string/teks_masuk"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>